# auditcenter_analyze

./: .gitignore  AGENTS.md  BREAKTHROUGH_SUCCESS.md  BUGFIX_SUMMARY.md  COUNTY_VERIFICATION_COMPLETE.md  EXTRACTION_PLAN.md  EXTRACTION_SUMMARY.md  FINAL_VERIFICATION_STATUS.md  MULTICOUNTY_VERIFICATION_GUIDE.md  Makefile  PACKAGE_STATUS.md  RANDOM_SELECTION_VERIFICATION_RESULTS.md  README.md  SAMPLE_SIZE_ENHANCEMENT.md  SESSION_SUMMARY.md  SINGLE_COUNTY_DISTRICT_PROGRESS.md  TODO.md  UNION_OF_SELECTIONS.md  VERIFICATION_INDEX.md  VERIFICATION_TOOLS_README.md  analyze_selection_flaws.py  boulder_pull_list.txt  broomfield_observer_summary.txt  broomfield_pull_list.txt  calculate_opportunistic_risk.py  data  datasette-metadata.json  dump_selection_sequences.md  extract_to_auditcenter_analyze.sh  generate_broomfield_observer_summary.py  generate_county_pull_list.py  generate_la_plata_selections.py  generate_observer_summary.py  investigate_boulder_failures.py  la_plata_observer_summary.txt  la_plata_selections.csv  launch_datasette.sh  pyproject.toml  reconstruction_results.md  report-improved.md  (+8 more)
.hooks/: pre-commit
analysis/: calculate_opportunistic_risk.py  verify_any_contest.py  verify_audit_comprehensive.py  verify_random_selection_verbose.py  verify_risk_calculations.py
datasette/: launch_datasette.sh  metadata.json
docs/: ANALYSIS_FAQ.md  AUDIT_BOARD_DETECTION_PLAN.md  AUDIT_TERMINOLOGY.md  BALLOT_CARD_COUNT_EXPLAINED.md  BASELINE_DIFFERENCES_ROOT_CAUSE.md  BASELINE_OPPORTUNISTIC_COMPARISON.md  BATCH_MATCHING_PLAN.md  BOULDER_FAILURE_ANALYSIS.md  RISK_REVIEW.md  (+28 more)
(+76 files in other folders)
